# informationretrieval-ir_ad_2

./: .gitignore  README.md  pyproject.toml  sample_submission.csv
code/: .env.example  README.md  install_elasticsearch.sh  rag_with_elasticsearch.py  run_elasticsearch.sh
code/llm/: embedding.py  generators.py
code/pipelines/: rag_callbacks.py
code/retrieval/: retriever.py
code/scripts/: rag_with_langgraph.py
